# hgepp

./: .gitignore  CMakeLists.txt  Original_README.txt  readme.txt
include/: hge.h  hge_gapi.h  hgeanim.h  hgecolor.h  hgedistort.h  hgefont.h  hgegui.h  hgeguictrls.h  hgeparticle.h  hgepp.h  hgerect.h  hgeresource.h  hgesprite.h  hgestrings.h  hgevector.h
include/hgepp/: color.h  config.h  distort.h  font.h  hge_impl.h  hge_pimpl.h  hgegui.h  hgeguictrls.h  hgeparticle.h  hgeresource.h  rect.h  res_manager.h  res_script.h  resources.bak  sprite.h  stringtable.h  types.h  vector.h
src/fontconv/: CMakeLists.txt
src/fonted/: CMakeLists.txt
src/helpers/: CMakeLists.txt
src/libPNG/: CMakeLists.txt
src/libhge/: CMakeLists.txt
src/libhgepp/: CMakeLists.txt  animation.cpp  color.cpp  demo.cpp  distort.cpp  font.cpp  graphics.cpp  hge_impl.h  hgeanim.cpp  hgecolor.cpp  hgedistort.cpp  hgefont.cpp  hgegui.cpp  hgeguictrls.cpp  hgelogo.cpp  hgeparticle.cpp  hgepmanager.cpp  hgerect.cpp  hgeresource.cpp  hgesprite.cpp  hgestrings.cpp  hgevector.cpp  ini.cpp  input.cpp  parser.cpp  parser.h  particle.cpp  particlemanager.cpp  power.cpp  random.cpp  rect.cpp  res_manager.cpp  res_parser.cpp  res_script.cpp  resource.cpp  resources.cpp  resources.h  sound.cpp  sprite.cpp  stringtable.cpp  (+3 more)
src/libhgepp/BASS/: bass.h
src/particleed/: CMakeLists.txt  commands.cpp  particleed.cpp  particleed.h
tutorials/tutorial01/: CMakeLists.txt  hge_tut01.cpp
tutorials/tutorial02/: CMakeLists.txt  hge_tut02.cpp
tutorials/tutorial03/: CMakeLists.txt  hge_tut03.cpp
tutorials/tutorial04/: CMakeLists.txt  hge_tut04.cpp
tutorials/tutorial05/: CMakeLists.txt  hge_tut05.cpp
tutorials/tutorial05_shaders/: CMakeLists.txt  hge_tut05_shaders.cpp
tutorials/tutorial06/: CMakeLists.txt  hge_tut06.cpp  menuitem.cpp  menuitem.h
tutorials/tutorial07/: CMakeLists.txt  hge_tut07.cpp
tutorials/tutorial08/: CMakeLists.txt  hge_tut08.cpp
